--- a/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/timeline/timeline.component.less
@@ -15,6 +15,10 @@
 @data-height_: 7px;
 @data-background-color_: @time-mark-background-color_;
 
+:host {
+  display: block;
+}
+
 .time-line {
   display: flex;
   flex-direction: row;
