--- a/projects/operative-situation/src/styles/sidebar.less
+++ b/projects/operative-situation/src/styles/sidebar.less
@@ -8,6 +8,13 @@
   .mat-drawer {
     width: @sidebar-width;
     background: @sidebar-background-color;
+    border-right: none !important;
+
+    .mat-button {
+      height: 40px;
+      // color: white;
+      background: #eceff1;
+    }
   }
 
   .mat-drawer-content {
