--- a/projects/operative-situation/src/styles/backdrops.less
+++ b/projects/operative-situation/src/styles/backdrops.less
@@ -6,3 +6,8 @@
   background: rgba(0, 0, 0, 0.32);
   backdrop-filter: blur(3px);
 }
+
+.mat-drawer-backdrop {
+  background: transparent !important;
+}
+
