--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div class="row pt-4 pb-4" *ngIf="selectedReport$ | async">
+  <div class="row pt-4" *ngIf="selectedReport$ | async">
     <div class="col-12">
       <!-- Start: Оборудование 35-150 кВ, задействованные ресурсы, потребление и режим работы -->
       <div class="row">
@@ -207,60 +207,13 @@
         <!-- End: Оборудование 35-150 кВ -->
 
         <!-- Start: Задействованные ресурсы -->
-        <div class="col-12 col-md-auto d-flex flex-column mt-4 mt-lg-0">
+        <div class="col-auto d-flex flex-column mt-4 mt-lg-0">
           <span class="row-caption">Задействованные ресурсы</span>
 
-
-          <div class="row no-gutters d-flex justify-content-between">
-            <div class="col-auto">
-              <app-indicator
-                class=""
-                [value]="(selectedReport$ | async)?.resources?.rise"
-                [title]="'Задействовано РИСЭ, шт'">
-              </app-indicator>
-            </div>
-            <div class="col-auto">
-              <app-indicator
-                [value]="(selectedReport$ | async)?.resources?.riseSumPower"
-                [title]="'Суммарная мощность, кВт'">
-              </app-indicator>
-            </div>
-            <div class="col-auto">
-              <app-indicator
-                class=""
-                [value]="(selectedReport$ | async)?.resources?.risePeople"
-                [title]="'Запитано от РИСЭ, человек'">
-              </app-indicator>
-            </div>
-
-            <div class="d-block d-lg-none w-100 pt-4"></div>
-
-            <div class="col-auto">
-              <app-indicator
-                [value]="(selectedReport$ | async)?.resources.brigades"
-                [title]="'Задействовано бригад, шт'">
-              </app-indicator>
-            </div>
-            <div class="col-auto">
-              <app-indicator
-                class=""
-                [value]="(selectedReport$ | async)?.resources.people"
-                [title]="'Задействовано человек'">
-              </app-indicator>
-            </div>
-            <div class="col-auto">
-              <app-indicator
-                [value]="(selectedReport$ | async)?.resources.technics"
-                [title]="'Единиц техники, шт'">
-              </app-indicator>
-            </div>
-          </div>
-
-          <!--
           <div class="d-flex flex-column justify-content-between flex-grow-1">
             <div class="d-flex flex-row justify-content-between">
               <app-indicator
-                class="mr-3 col-auto"
+                class="mr-3"
                 [value]="(selectedReport$ | async)?.resources?.rise"
                 [title]="'Задействовано РИСЭ, шт'">
               </app-indicator>
@@ -269,7 +222,7 @@
                 [title]="'Суммарная мощность, кВт'">
               </app-indicator>
             </div>
-            <div class="d-flex flex-row justify-content-between align-items-stretch">
+            <div class="d-flex flex-row justify-content-between align-items-stretch mt-3 mt-lg-0">
               <app-indicator
                 class="mr-3"
                 [value]="(selectedReport$ | async)?.resources?.risePeople"
@@ -280,7 +233,7 @@
                 [title]="'Задействовано бригад, шт'">
               </app-indicator>
             </div>
-            <div class="d-flex flex-row justify-content-between align-items-stretch">
+            <div class="d-flex flex-row justify-content-between align-items-stretch mt-3 mt-lg-0">
               <app-indicator
                 class="mr-3"
                 [value]="(selectedReport$ | async)?.resources.people"
@@ -292,15 +245,14 @@
               </app-indicator>
             </div>
           </div>
-          -->
 
         </div>
         <!-- End: Задействованные ресурсы -->
 
         <!-- Start: Потребление и режим работы -->
-        <div class="col d-flex flex-column">
+        <div class="col d-flex flex-column mt-4 mt-lg-0">
           <!-- Start: Потребление -->
-          <div class="d-flex flex-column flex-grow-1 mt-4 mt-lg-0">
+          <div class="d-flex flex-column flex-grow-1">
             <!-- Start: Заголовок -->
             <div class="row">
               <div class="col-auto">
@@ -537,7 +489,7 @@
         <!-- End: Нарушения -->
 
         <!-- Start: Погодные условия -->
-        <div class="col-12 col-xl-6 d-flex flex-column mt-4 mt-lg-0">
+        <div class="col-12 col-xl-6 d-flex flex-column mt-4 mt-xl-0">
           <span class="row-caption">Погодные условия</span>
           <app-weather-summary
             class="d-flex flex-column flex-grow-1"
