Portal: application icon add gradient mechanism

--- a/projects/intranet-portal/src/app/app.component.html
+++ b/projects/intranet-portal/src/app/app.component.html
@@ -11,14 +11,34 @@
 
           <div class="side-bar-block-title">Наши сервисы</div>
           <div class="application-icons mt-3">
-            <app-application-icon [label]="'Заявки УКиТАСУ'" [indicator]="'2'"></app-application-icon>
-            <app-application-icon [label]="'Заявки транспорт'"></app-application-icon>
-            <app-application-icon [label]="'Заявки АХО'" [indicator]="'3'"></app-application-icon>
+            <app-application-icon
+              [color]="'#26a69a'"
+              [label]="'Заявки УКиТАСУ'"
+              [indicator]="'1'">
+            </app-application-icon>
+            <app-application-icon
+              [color]="'#42a5f5'"
+              [label]="'Заявки транспорт'">
+            </app-application-icon>
+            <app-application-icon
+              [color]="'#5c6bc0'"
+              [label]="'Заявки АХО'"
+              [indicator]="'3'">
+            </app-application-icon>
           </div>
           <div class="application-icons mt-3">
-            <app-application-icon [label]="'Телефонный справочник'"></app-application-icon>
-            <app-application-icon [label]="'Расчетные листки'"></app-application-icon>
-            <app-application-icon [label]="'Оперативная обстановка'"></app-application-icon>
+            <app-application-icon
+              [color]="'#fb8c00'"
+              [label]="'Телефонный справочник'">
+            </app-application-icon>
+            <app-application-icon
+              [color]="'#66bb6a'"
+              [label]="'Расчетные листки'">
+            </app-application-icon>
+            <app-application-icon
+              [color]="'#ab47bc'"
+              [label]="'Оперативная обстановка'">
+            </app-application-icon>
           </div>
 
           <div class="side-bar-block-title mt-5">Полезные ресурсы</div>
