--- a/projects/intranet-portal/src/app/components/application-icon/application-icon.component.less
+++ b/projects/intranet-portal/src/app/components/application-icon/application-icon.component.less
@@ -22,6 +22,8 @@
   float: right;
   width: @width;
   height: @height;
+  border-radius: 27px;
+  box-shadow: 0px 2px 12px 0px rgba(171,171,171,0.66);
 
   .indicator {
     position: absolute;
@@ -49,10 +51,10 @@
     height: @height;
     padding: @padding;
 
-    background: linear-gradient(#26a69a, lighten(color(#26a69a), 30%));
-    -webkit-box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
-    -moz-box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
-    box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
+    // background: linear-gradient(#26a69a, lighten(color(#26a69a), 30%));
+    // -webkit-box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
+    // -moz-box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
+    // box-shadow: 0px 3px 8px 1px rgba(171,171,171,0.66);
     cursor: pointer;
 
     .border-squircle(50%, 50%);
