--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -1,3 +1,15 @@
-<p>
-  start works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-8 pl-2">
+      <div class="row">
+        <div class="col-12 block-title">Объявления</div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <app-articles-block [layout]="articlesLayout.FOUR_QUARTER"></app-articles-block>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">side</div>
+  </div>
+</div>
