--- a/projects/intranet-portal/src/app/styles/fonts.less
+++ b/projects/intranet-portal/src/app/styles/fonts.less
@@ -36,7 +36,7 @@
 @font-face {
   font-family: 'Open Sans Semi Bold';
   font-style: normal;
-  font-weight: 600;
+  // font-weight: 600;
   src:  url('/assets/OpenSans-SemiBold.ttf') format('truetype');
 }
 
