--- a/projects/intranet-portal/src/styles.less
+++ b/projects/intranet-portal/src/styles.less
@@ -3,6 +3,8 @@
 @import './app/styles/fonts';
 @import './app/styles/side-bar';
 @import './app/styles/layout';
+@import './app/styles/banners';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+button { outline: none !important; }
