--- a/projects/intranet-portal/src/app/styles/layout.less
+++ b/projects/intranet-portal/src/app/styles/layout.less
@@ -1,4 +1,4 @@
-@header-height: 60px;
+@header-height: 100px;
 
 .layout {
   display: flex;
@@ -8,13 +8,25 @@
   .header {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     height: @header-height;
+    box-sizing: border-box;
+
+    .logos {
+      img {
+        height: 40px;
+
+        &:last-of-type {
+          height: 50px;
+        }
+      }
+    }
   }
 
   .content {
     overflow-y: auto;
-    overflow-x: visible;
+    overflow-x: hidden;
     flex: 1;
+    padding-top: 20px;
   }
 }
