--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-8 pl-2">
+    <div class="col-auto pl-2">
       <div class="row">
         <div class="col-12 block-title">Объявления</div>
       </div>
-      <div class="row">
-        <div class="col-12">
+      <div class="row mt-3">
+        <div class="col-12 pl-0">
           <app-articles-block [layout]="articlesLayout.FOUR_QUARTER"></app-articles-block>
         </div>
       </div>
