--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.less
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.less
@@ -1,4 +1,4 @@
-@block-title-font-family: 'Open Sans Semi Bold';
+@block-title-font-family: 'Open Sans Regular';
 @block-title-font-size: 16px;
 @block-title-font-transform: uppercase;
 @block-title-font-color: #005B9C;
