INTRANET PORTAL: Start page layout modified

--- a/projects/intranet-portal/src/app/app.component.html
+++ b/projects/intranet-portal/src/app/app.component.html
@@ -43,7 +43,8 @@
             </app-application-icon>
             <app-application-icon
               [color]="'#4f9a94'"
-              [label]="'Оперативная обстановка'">
+              [label]="'Оперативная обстановка'"
+              [imageUrl]="'assets/images/clock.png'">
             </app-application-icon>
           </div>
           <div class="application-icons mt-3">
@@ -127,7 +128,7 @@
           </div>
         </div>
       </div>
-      <div class="content pl-5 pr-5">
+      <div class="content pl-5 pr-5 pb-5">
         <router-outlet></router-outlet>
       </div>
     </div>
