--- a/projects/intranet-portal/src/app/features/start/components/start/start.component.html
+++ b/projects/intranet-portal/src/app/features/start/components/start/start.component.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+
+  <!-- Start: Объявления -->
   <div class="row">
     <div class="col-auto pl-2">
       <div class="row">
@@ -6,10 +8,26 @@
       </div>
       <div class="row mt-3">
         <div class="col-12 pl-0">
-          <app-articles-block [layout]="articlesLayout.FOUR_QUARTER"></app-articles-block>
+          <app-articles-block [layout]="articlesLayout.EQUALS"></app-articles-block>
         </div>
       </div>
     </div>
-    <div class="col-4">side</div>
+    <div class="col pl-5 pt-3" style="margin-top: 24px;">
+      <app-weather></app-weather>
+    </div>
+  </div>
+  <!-- End: Объявления -->
+
+  <div class="row mt-5">
+    <div class="col-auto pl-2">
+      <div class="row">
+        <div class="col-12 block-title">Наши люди</div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-12 pl-0">
+          <app-articles-block [layout]="articlesLayout.ONE_LEAD_AND_EQUALS"></app-articles-block>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
